Add ChickenTeriyaki.html and style.css

--- a/recipes/ChickenTeriyaki.html
+++ b/recipes/ChickenTeriyaki.html
@@ -4,6 +4,7 @@
         <head>
             <meta charset="UTF-8">
             <title>Chicken Teriyaki</title>
+            <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <h1>Chicken Teriyaki</h1>
